--- a/mat383/layouts/_default/baseof.html
+++ b/mat383/layouts/_default/baseof.html
@@ -18,7 +18,7 @@
 	<link rel="me" href="https://github.com/mat-383"/>
 </head>
 <div class="balls-bg"></div>
-<!--<div class="uncoveranimation"></div>-->
+
 <nav class="navbar">
 	<div class="navbarcontent">
 		<a href="/" class="homelink h-card" rel="me" style="color:#ccc">mat383.com</a>
@@ -51,7 +51,7 @@
 	<div class="particle"></div>
 	<div class="particle"></div>
 	<div class="particle"></div>
-</div>
+</div><!--<div class="uncoveranimation"></div>-->
 <body>
 <!--{{ if .Site.Menus.main }}{{ partial "nav.html" . }}{{ end -}}-->
 <main>
