--- a/mat383/layouts/_default/baseof.html
+++ b/mat383/layouts/_default/baseof.html
@@ -4,7 +4,7 @@
 	<title>{{ if not .IsHome }}{{ .Title | title }} - {{ end }}{{ .Site.Title }}</title>
 	<link rel="canonical" href="{{ .Site.BaseURL }}">
 	<link rel='alternate' type='application/rss+xml' title="{{ .Site.Title }} RSS" href='/index.xml'>
-	<link rel='stylesheet' type='text/css' href='/style.css'>
+	<link rel='stylesheet' type='text/css' href='/styles.css'>
 	<link rel="icon" type="image/x-icon" href="/favicon.ico">
 	<meta name="description" content="{{ .Summary }}{{ if .IsHome }}{{ end }}">
 	<!--<meta name="description" content="{{ with .Params.description }}{{ . }}{{ else }}{{ .Summary }}{{ end }}">-->
