--- a/mat383/layouts/_default/baseof.html
+++ b/mat383/layouts/_default/baseof.html
@@ -44,7 +44,7 @@
 <!--{{ if .Site.Menus.main }}{{ partial "nav.html" . }}{{ end -}}-->
 <main>
 {{ if not (.Param "hidecontentbg")}}
-<div class="contentbg">
+<div class="contentbg float-in">
 {{end -}}
 
 {{if not (hasPrefix .RelPermalink "/tags/")}}
