--- a/mat383/static/styles.css
+++ b/mat383/static/styles.css
@@ -27,7 +27,7 @@ main{
 .contentbg{
 	background-color:#00000057;
 	box-shadow:0px 0px 20px 10px #0000006c;
-	padding:20px;
+	padding:1px 20px 20px 20px;
 	margin:25px;
 }
 .float-in{
@@ -263,6 +263,7 @@ a.activepage{
 	margin:30px auto 30px auto;
 	width:fit-content;
 	opacity:0.4;
+	p{margin:0;}
 }
 .posttags{
 	opacity:1;
@@ -581,7 +582,6 @@ svg{
 
 
 
-
 /*--- Comments styling ---*/
 
 #commentSection{
@@ -793,7 +793,7 @@ footer a:hover{
 		background-color:transparent;
 		box-shadow:none;
 		clip-path:inset(0 0 -100px 0);
-		padding:10px;
+		padding:1px 10px 10px 10px;
 		margin:0px;
 	}
 	.hero{
