--- a/mat383/layouts/partials/list.html
+++ b/mat383/layouts/partials/list.html
@@ -1,31 +1,39 @@
-{{- range .Pages }}
-	<a href="{{ .RelPermalink }}" class="postpreviewlink postpreviewtime">
-		<div class="postpreview activateposttitleunderline">
-			<div style="display: grid;grid-template-columns: auto auto 1fr;" class=" activateposttitleunderline">
-					{{- if .Param "datesinlist" -}}
-						<time datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" }}">{{ .Date.Format "2006 Jan 02" }}</time>
-					{{- end -}}
-				<div class="postpreviewtags">
-					{{ partial "taglist.html" . }}{{ if .Param "taglist" }}{{ end -}}
+<div class="posts">
+	{{- range .Pages }}
+		<a href="{{ .RelPermalink }}" class="postpreviewlink">
+			<div class="postpreview">
+				{{ if .Params.coverimg }}
+					<div class="postpreviewcoverimg">
+					<div class="postpreviewcoverimg2">
+						<picture>
+							<source srcset="/images/thumbnails/{{ .Params.coverimg }}.avif" type="image/avif">
+							<img src="/images/thumbnails/{{ .Params.coverimg }}.jpg" width="400" height="200">
+						</picture>
+					</div>
+					</div>
+				{{ end }}
+				<div class="postpreviewtext">
+					<div class="postpreviewtimetags">
+						<div class="postpreviewtime">
+							{{- if .Param "datesinlist" -}}
+								<time datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" }}">{{ .Date.Format "2006 Jan 02" }}</time>
+							{{- end -}}
+						</div>
+						<div class="postpreviewtags">
+							{{ partial "taglist2.html" . }}{{ if .Param "taglist" }}{{ end -}}
+						</div>
+					</div>
+					
+					<div class="postpreviewtitle">
+						{{ .Title }}
+					</div>
+					{{ if .Params.summary }}
+						<div class="postpreviewsummary">
+							{{ .Params.summary }}
+						</div>
+					{{ end }}
 				</div>
-				<a href="{{ .RelPermalink }}" class="postpreviewlink"> {{- if not (.Param "tags") -}}<a href="{{ .RelPermalink }}" class="postpreviewlink">{{- end -}} {{/* lol fixed a bug here by simply duplicating a line */}}
 			</div>
-			
-			{{- if .Param "authorsinlist" }}
-				{{ with .Params.authors }}
-				by 
-				{{ delimit . ", " " and " }}
-			{{end}}
-
-			<div class="postpreviewtitle">
-				{{ .Title }}
-			</div>
-
-			{{ if .Params.summary }}
-				<div class="postpreviewsummary">{{ .Params.summary }}</div>
-			{{ end }}
-
-			{{ end -}}
-		</div>
-	</a>
-{{- end }}
+		</a>
+	{{- end }}
+</div>
