--- a/mat383/static/style.css
+++ b/mat383/static/style.css
@@ -30,6 +30,10 @@ main{
 	padding:1px 20px 20px 20px;
 	margin:25px;
 }
+.contentmargin{
+	margin-left:25px;
+	margin-right:25px;
+}
 .float-in{
 	animation-name:float-in;
 	animation-duration:1s;
@@ -254,6 +258,7 @@ a.activepage{
 }
 .tag, .tagcloud li{
 	background:rgba(0, 180, 0, 0.2);
+	margin:0;
 	border-radius:3px;
 	padding:1px 6px 1px 6px;
 }
@@ -264,6 +269,7 @@ a.activepage{
 	width:fit-content;
 	opacity:0.4;
 	p{margin:0;}
+	filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.5));
 }
 .posttags{
 	opacity:1;
@@ -277,7 +283,7 @@ a.activepage{
 	transition:0.4s;
 	transition-property:background, color, opacity;
 	a{
-		background:#303030 !important;
+		background:rgba(90, 90, 90, 0.3) !important;
 		color:#ccc !important;
 		opacity:0.75;
 	}
@@ -303,6 +309,39 @@ a.activepage{
 
 
 /*--- Other generic styles ---*/
+:is(h1, h2, h3):not(div.contentbg > *) {
+	text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.61);
+}
+
+.coverimgcontainer {
+	position: relative;
+	translate: 0 -50px;
+	scale:1.08;
+	z-index: -2;
+	animation: fadein 2s both ease-out;
+}
+.coverimgcontainer2 {
+	position:absolute;
+	height:400px;
+	width:100%;
+	z-index: -2;
+	top:-0.11%;
+	left:0%;
+	mask-image: linear-gradient(to left, transparent 1%, white 20%, white 80%, transparent 99%);
+	opacity:0.75;
+	filter:blur(2px);
+}
+.coverimg picture{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width:800px;
+	aspect-ratio: 2/1;
+	object-fit: cover;
+	z-index: -1;
+	mask-image: linear-gradient(to top, transparent 1%, white 60%, white 80%, transparent 99%);
+}
 .pagetitle{
 	text-align:center;
 	font-weight:normal;
@@ -310,6 +349,7 @@ a.activepage{
 	margin-top:15px;
 	margin-bottom:30px;
 	line-height:normal;
+	text-shadow: 3px 3px 8px black;
 }
 .pagesummary{
 	font-style:italic;
@@ -317,12 +357,14 @@ a.activepage{
 	max-width:500px;
 	padding:0 25px 0 25px;
 	text-align:center;
+	text-shadow: 2px 2px 6px black;
 }
 .datewritten{
 	opacity:0.6;
 	font-size:smaller;
 	text-align:center;
 	margin-bottom:20px;
+	text-shadow: 2px 2px 3px black;
 }
 .classicdatewritten{
 	text-align:left;
@@ -398,6 +440,12 @@ svg{
 	width:100%;
 	aspect-ratio:16/9;
 }
+.headernocoverimg{
+	p, h1, .posttags{
+	filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0));
+	text-shadow: none;
+	}
+}
 
 
 
@@ -411,48 +459,76 @@ svg{
 
 
 /* Post previews */
-.postpreview{
-	list-style-type:none;
-	margin:auto 20px 10px 10px;
-	border-width:0px 0px 0px 3px;
-	border-style:solid;
-	border-color:rgb(0, 180, 0);
-	padding:2px 10px 4px 8px;
-    display:inline-block;
-	flex-direction:column; /* this may not be necessary */
-	background-size:20px auto;
-	transition:margin-left 0.1s, background-size 0.3s;
-}
-.postpreview:hover{
-	margin-left:15px;
-	transition-timing-function:ease-out;
-	background-size:100% auto;
-	background-repeat:no-repeat;
-	background-color:rgba(0, 180, 0, 0.2);
-	@supports (background-image:linear-gradient(to right, rgba(0, 180, 0, 0.2), transparent)){
-		background-color:transparent;
-		background-image:linear-gradient(to right, rgba(0, 180, 0, 0.2), transparent);
-	}
+.posts {
+	display: flex;
+	gap:50px;
+	margin: 40px 0 30px 0;
+	justify-content: center;
 }
 .postpreviewlink{
 	text-decoration-line:none;
 	color:#ccc;
+	flex: 1 1 0px;
+	max-width: 500px;
+}
+.postpreview{
+	display:flex;
+	flex-direction:column;
+	position: relative;
+
+	background-color:#00000057;
+	box-shadow:0px 0px 20px 10px #0000006c;
+	transition:0.25s scale cubic-bezier(0.075, 0.82, 0.165, 1);
+
+}
+.postpreview:hover{
+	scale:0.95;
+	.postpreviewtitle {text-decoration:underline;}
+}
+.postpreviewtext{
+	z-index: 1;
+	display:flex;
+	flex-direction: column;
+	margin:10px;
+}
+.postpreviewcoverimg {
+	align-self: center;
+	mask-image: linear-gradient(to top, transparent 5%, white 70%, white 80%, transparent 95%);
+	width: 122%;
+	translate:0px -30px;
+	margin-bottom: -130px;
+	z-index: 0;
+	aspect-ratio: 2/1;
+}
+.postpreviewcoverimg2 {
+	mask-image: linear-gradient(to left, transparent 5%, white 20%, white 80%, transparent 95%);
+}
+.postpreviewcoverimg2 img{
+	width: 100%;
+	height:auto;
+	aspect-ratio: 2/1;
+	margin:0;
+	display:inline;
 }
 .postpreviewtitle{
 	color:rgb(0, 180, 0);
-	padding-top:0px;
 }
-.activateposttitleunderline:hover .postpreviewtitle{text-decoration:underline;}
-.postpreviewtime{
-	display:grid;
-	place-items:center;
-	padding-right:4px;
-	padding-bottom:2px;
-	padding:0px 4px 0 0;
+.postpreviewtimetags{
+	display:flex;
+	gap:5px;
+	flex-direction:row;
+	align-content: flex-end;
+	flex-wrap: nowrap;
+	width:fit-content;
+	opacity:0.75;
 }
-.postpreviewtags .tag{padding:0 4px 0 4px;}
-.postpreviewtime, .postpreviewtags{font-size:12px;}
-.postpreviewsummary{padding-top:0px;}
+.postpreviewtags{
+	display:none;
+}
+.postpreviewtime, .postpreviewtags{
+	font-size:12px;
+	margin-top:-8px;
+}
 
 
 
@@ -543,6 +619,7 @@ svg{
 	display:flex;
 	flex-direction:column;
 	justify-content:center;
+	text-shadow: 4px 4px 6px rgba(0, 0, 0, 0.61);
 }
 .hero p{
 	color:white;
@@ -564,8 +641,11 @@ svg{
 .hero p:nth-child(3):hover{
 	animation:shake 0.25s infinite; 
 }
-.homecontent{
+.homecontent.contentbg{
 	padding-top:1px;
+	padding-bottom:1px;
+}
+.homecontent{
 	animation-delay:0.25s;
 }
 
@@ -785,6 +865,7 @@ footer a:hover{
 	.hero p:nth-child(3){font-size:0.75em;}
 }
 @media (max-width:550px){
+	main {overflow:hidden;}
 	.navbar{
 		margin-bottom:0px;
 		background-color:#00000050;
@@ -825,6 +906,17 @@ footer a:hover{
 	.particle-container .particle:nth-child(6){display:none;}
 	.particle-container .particle:nth-child(7){display:none;}
 	.particle-container .particle:nth-child(8){display:none;}
+	.posts{
+		flex-direction: column;
+		gap: 60px;
+	}
+	.postpreviewcoverimg2 {mask-image: none; width:115vw;}
+	.postpreview {
+		margin-left:-25px;
+		width:100vw;
+		background-color:#00000036;
+		box-shadow:0px 0px 20px 5px #00000044;
+	}
 }
 @media (max-width:400px){
 	.homelink{font-size:125%;}
@@ -836,6 +928,9 @@ footer a:hover{
 @media (max-width:340px){
 	.navbarcontent{flex-direction:column;align-items:center;}	
 	.hero{margin-top:-15px;margin-bottom:25px;}
+	.postpreviewcoverimg {
+		translate:0px -24px;
+	}
 }
 @media (max-width:300px){
 	.hero{padding:50px 50px 0 50px;}
