--- a/mat383/static/style.css
+++ b/mat383/static/style.css
@@ -73,10 +73,10 @@ div.balls-bg{
 	position:fixed;
 	z-index:-100;
 	background-color:#000000;
-	background-image:url("images/circles-bg.svg");
+	background-image:url("images/circles-bg.svg") !important;
     background-repeat:repeat;
 	background-size:100%;
-	filter:blur(4.5vw) brightness(125%);
+	filter:blur(4.5vw) brightness(125%) !important;
 }
 
 
@@ -150,7 +150,7 @@ div.balls-bg{
 @media (max-width:2000px){
 	div.balls-bg{
 		background-size:100em;
-		filter:blur(6em) brightness(125%);
+		filter:blur(6em) brightness(125%) !important;
 	}
 	.particle-container .particle{
 		width:10em;
@@ -318,7 +318,7 @@ a.activepage{
 	translate: 0 -50px;
 	scale:1.08;
 	z-index: -2;
-	animation: fadein 2s both ease-out;
+	animation: fadein 2s both ease-out 0.5s;
 }
 .coverimgcontainer2 {
 	position:absolute;
