--- a/mat383/static/style.css
+++ b/mat383/static/style.css
@@ -174,6 +174,7 @@ div.balls-bg{
 	position:relative;
 	z-index:1000;
 	margin-bottom:80px;
+	height: 60px;
 }
 .navbarcontent{
 	max-width:900px;
@@ -181,7 +182,8 @@ div.balls-bg{
 	display:flex;
 	justify-content:space-between;
 	align-items:center;
-	padding:10px;
+	padding:0 10px 10px 10px;
+	height: 100%;
 }
 .navbarcontent a:hover{
 	color:rgb(240, 240, 240) !important;
@@ -226,10 +228,33 @@ a.activepage{
 	font-weight:bold;
 	color:rgb(0, 180, 0);
 	transition:color 0.4s;
+	height:90%;
 	border:none !important;
+	transition: 0.5s translate;
 }
-
-
+.homelink svg {
+	width: 100%;
+	height: 100%;
+}
+.navbarm {
+	fill:transparent;
+	stroke:#ccc;
+	stroke-opacity:1;
+    stroke-width:40px;
+	stroke-linecap:round;
+	stroke-linejoin:round;
+	paint-order:fill stroke;
+	transition: 0.5s fill, 0.5s stroke;
+}
+.homelink:hover {
+	.navbarm {
+		transition: 0.1s;
+		fill:green;
+		stroke:white;
+	}
+	translate:3px 0;
+	transition: 0.05s translate;
+}
 
 
 
@@ -926,7 +951,9 @@ footer a:hover{
 	.pagesummary{padding:0 0 0 0;}
 }
 @media (max-width:340px){
+	.navbar{height:95px;padding:5px;}
 	.navbarcontent{flex-direction:column;align-items:center;}	
+	.homelink:hover{translate:0 3px;}
 	.hero{margin-top:-15px;margin-bottom:25px;}
 	.postpreviewcoverimg {
 		translate:0px -24px;
@@ -946,6 +973,7 @@ footer a:hover{
 	.loadcommentsicon{display:none;}
 }
 @media (max-width:170px){
+	.navbar{height:160px;padding:5px;}
 	.homelink{font-size:100%;}
 	.otherlinks{
 		flex-direction:column;
