--- a/mat383/layouts/_default/baseof.html
+++ b/mat383/layouts/_default/baseof.html
@@ -27,6 +27,7 @@
 		</a>
 		<div class="otherlinks"> <!--If the current page is equal to this URL, give it a CSS class (might have to change this later)-->
 			<a href="/blog" style="color:#ccc" class="{{if or (hasPrefix .RelPermalink "/blog/") (hasPrefix .RelPermalink "/tags/")}}activepage{{end}}">Blog</a>
+			<a href="/now" style="color:#ccc" class="{{if hasPrefix .RelPermalink "/now/"}}activepage{{end}}">Now</a>
 			<a href="/projects" style="color:#ccc" class="{{if hasPrefix .RelPermalink "/projects/"}}activepage{{end}}">Projects</a>
 			<a href="/contact" style="color:#ccc" class="{{if hasPrefix .RelPermalink "/contact/"}}activepage{{end}}">Contact</a>
 		</div>
