--- a/mat383/static/style.css
+++ b/mat383/static/style.css
@@ -228,7 +228,7 @@ a.activepage{
 	font-weight:bold;
 	color:rgb(0, 180, 0);
 	transition:color 0.4s;
-	height:90%;
+	height:80%;
 	border:none !important;
 	transition: 0.5s translate;
 }
@@ -443,9 +443,11 @@ em.green{
 
 img, video{
 	max-width:100%;
+	height:auto;
 	margin-left:auto;
 	margin-right:auto;
 	display:block;
+	object-fit:scale-down;
 }
 .inlineimage{
 	display:inline;
