--- a/mat383/static/style.css
+++ b/mat383/static/style.css
@@ -702,7 +702,7 @@ svg{
 	padding:2px 13px 2px 13px;
 	max-width:800px;
 	border-radius:5px;
-	background-color:#202020;
+	background-color:#08080862;
 	border:2px solid rgb(0, 180, 0);
 	p{
 		color:rgb(0, 180, 0);
