Added some socials to the footer

--- a/mat383/static/style.css
+++ b/mat383/static/style.css
@@ -778,6 +778,9 @@ footer a{
 footer a:hover{
 	color:rgb(0, 180, 0);
 }
+.footersocials a{
+	display:inline-block;
+}
 .footerbadges a{
 	display:inline-block;
 }
