--- a/mat383/layouts/_default/baseof.html
+++ b/mat383/layouts/_default/baseof.html
@@ -19,6 +19,18 @@
 </head>
 <div class="balls-bg"></div>
 
+<!-- Particle background -->
+<div class="particle-container">
+	<div class="particle"></div>
+	<div class="particle"></div>
+	<div class="particle"></div>
+	<div class="particle"></div>
+	<div class="particle"></div>
+	<div class="particle"></div>
+	<div class="particle"></div>
+	<div class="particle"></div>
+</div>
+{{if not (hasPrefix .RelPermalink "/blank/")}}
 <nav class="navbar">
 	<div class="navbarcontent">
 		<a href="/" class="homelink h-card" rel="me" style="color:#ccc">
@@ -33,18 +45,22 @@
 		</div>
 	</div>
 </nav>
-<!-- Particle background -->
-<div class="particle-container">
-	<div class="particle"></div>
-	<div class="particle"></div>
-	<div class="particle"></div>
-	<div class="particle"></div>
-	<div class="particle"></div>
-	<div class="particle"></div>
-	<div class="particle"></div>
-	<div class="particle"></div>
-</div>
-<body>
+<body style="visibility: hidden;">
+<script>
+	// Helper function
+	let domReady = (cb) => {
+		document.readyState === 'interactive' || document.readyState === 'complete'
+		? cb()
+		: document.addEventListener('DOMContentLoaded', cb);
+	};
+	
+	domReady(() => {
+		// Display body when DOM is loaded
+		document.body.style.visibility = 'visible';
+	});
+</script>
+<script>0</script>
+<noscript><style>body { visibility: visible; }</style></noscript>
 <!--{{ if .Site.Menus.main }}{{ partial "nav.html" . }}{{ end -}}-->
 <main>
 
@@ -77,10 +93,19 @@
 	{{partial "tagsite.html" .}}
 	{{partial "list.html" .}}
 {{else if hasPrefix .RelPermalink "/tags/"}} {{/* to specify new tag colours, modify the line below, the one in tagcloud.html, and the one in taglist.html */}}
-	<h2 style="margin-bottom:50px">Showing all posts tagged with <b class="tag {{if eq .Title "Outside"}}tagoutside{{else}}{{if eq .Title "Website"}}tagwebsite{{end}}{{end}}">{{block "title" .}}{{end}}</b>:</h2>
+	<h2 style="margin-bottom:50px">Showing all posts tagged with <b class="tag {{if eq .Title "Outside"}}tagoutside{{else}}{{if eq .Title "Website"}}tagwebsite{{end}}{{end}}{{if eq .Title "Game Dev"}}taggamedev{{end}}">{{block "title" .}}{{end}}</b>:</h2>
 	{{partial "list.html" .}}
 {{end}}
 {{ if .IsHome }}
+{{ end }}
+
+<!--The YouTube link button-->
+{{if .Param "ytvid"}}
+	<div id="ytbuttoncontainer">
+		<a class="ytbutton" href="https://www.youtube.com/watch?v={{.Param "ytvid"}}">
+			<p>Watch on </p><img class="ytbuttonicon" src="/icons/youtubefull.svg" alt="YouTube icon" style="height:25px; width: 108px;">
+		</a>
+	</div>
 {{ end }}
 
 {{ block "main" . }}
@@ -180,6 +205,7 @@ comments partial/shortcode is loaded-->
 {{ if not (.Param "hidecontentbg")}}
 </div>
 {{end -}}
+{{end}}
 
 </body>
 </html>
