--- a/mat383/layouts/partials/taglist2.html
+++ b/mat383/layouts/partials/taglist2.html
@@ -6,9 +6,10 @@
     {{- range $k, $v := .Params.tags -}}
     {{- $url := printf "tags/%s" (. | urlize | lower) -}}
     <p class="tag
-        {{if eq (. | title) "Outside"}}tagoutside{{else}}
+        {{if eq (. | title) "Outside"}}tagoutside{{end}}
         {{if eq (. | title) "Website"}}tagwebsite{{end}}
-    {{end}}" style="display:inline-block;"id="tag_{{ . | lower }}" href="{{ $url | absURL }}">{{ . | title }}</p>
+        {{if eq (. | title) "Game Dev"}}taggamedev{{end}}
+    " style="display:inline-block;"id="tag_{{ . | lower }}" href="{{ $url | absURL }}">{{ . | title }}</p>
     {{- if lt $k (sub $tagsLen 1) }} {{ end -}}
     {{- end -}}
 {{- end -}}
