--- a/mat383/layouts/partials/comments.html
+++ b/mat383/layouts/partials/comments.html
@@ -1,7 +1,7 @@
 <div id="commentSection">
     <button id="loadComments" class="loadcommentsbutton">
         <p>Load Comments</p>
-        <img class="loadcommentsicon" src="/icons/comments-green.svg" alt="Guestbook icon" style="height:36px; width: 40px;">
+        <img class="loadcommentsicon" src="/icons/comments-green.png" alt="Comments icon" style="height:36px; width: 40px;">
     </button>
 </div>
 
