--- a/mat383/layouts/shortcodes/guestbook.html
+++ b/mat383/layouts/shortcodes/guestbook.html
@@ -1,7 +1,7 @@
 <div id="commentSection">
     <button id="loadComments" class="loadcommentsbutton">
         <p>Load Guestbook</p>
-        <img class="loadcommentsicon" src="/icons/guestbook-green.svg" alt="Guestbook icon" style="height:36px; width: 40px;">
+        <img class="loadcommentsicon" src="/icons/guestbook-green.png" alt="Guestbook icon" style="height:36px; width: 40px;">
     </button>
 </div>
 
