--- a/mat383/layouts/_default/baseof.html
+++ b/mat383/layouts/_default/baseof.html
@@ -69,7 +69,7 @@
 				<div class="coverimgcontainer2">
 					<div class="coverimg">
 						<picture>
-							<source srcset="/images/covers/{{ .Params.coverimg }}.avif" type="image/avif">
+							<source srcset="/images/covers/{{ .Params.coverimg }}.{{ .Params.coverimgmaintype }}" type="image/{{ .Params.coverimgmaintype }}">
 							<img src="{{ .Params.coverimg }}.jpg" width="800" height="400">
 						</picture>
 					</div>
