--- a/mat383/assets/style.css
+++ b/mat383/assets/style.css
@@ -500,74 +500,137 @@ svg{
 
 
 /* Post previews */
-.posts {
-	display: flex;
+.postscontainer {
+	/*display: flex;
 	flex-wrap: wrap;
-	flex-direction: row;
+	flex-direction: column;
 	gap:70px;
-	margin: 60px 0 60px 0;
 	align-items:center;
-	justify-content: center;
+	justify-content: center;*/
+	margin: 60px 0 60px 0;
 }
 .postpreviewlink{
 	text-decoration-line:none;
 	color:#ccc;
-	flex: 1 1 28%;
+	margin: 30px auto;
+	/*flex: 1 1 28%;*/
 	max-width: fit-content;
+
+	max-height: fit-content;
 }
 .postpreview{
+	min-height: 45px;
 	display:flex;
 	flex-direction:column;
+	justify-content: flex-end;
 	position:relative;
 
-	background-color:#00000057;
-	box-shadow:0px 0px 20px 10px #0000006c;
+	/*background-color:#00000057;*/
+	/*box-shadow:0px 0px 20px 10px #0000006c;*/
 	transition:0.4s scale cubic-bezier(0.075, 0.82, 0.165, 1);
 
 }
 .postpreview:hover{
 	scale:1.025;
 	.postpreviewtitle {text-decoration:underline;}
-	justify-content: left;
+	.postpreviewcoverimg1{filter:brightness(1.15)}
+	.postpreviewcoverimg2{filter:blur(15px) brightness(1.5)}
 }
 .postpreviewtext{
+	/*TODO I can add backdrop-filter here maybe*/
+	position:absolute;
+	width:calc(100% - 20px);
 	z-index: 1;
-	display:flex;
-	flex-direction: column;
-	margin:10px;
+	display:inline;
+	margin:1% 10px;
+	padding-bottom: 10px;
+	/*background-color:#000000bb;
+	box-shadow:0px 0px 20px 10px #000000bb;*/
+	
 }
-.postpreviewcoverimg {
-	align-self: center;
-	mask-image: linear-gradient(to top, transparent 5%, white 70%, white 80%, transparent 95%);
-	width: 122%;
-	translate:0px -30px;
-	margin-bottom: -130px;
-	z-index: 0;
-	aspect-ratio: 2/1;
+.postpreviewtextnocoverimg{
+	position:relative;
 }
-.postpreviewcoverimg2 {
-	mask-image: linear-gradient(to left, transparent 5%, white 20%, white 80%, transparent 95%);
+.postpreviewtextbackground{
+	z-index:-1;
+	position:absolute;
+	filter:blur();
+	bottom:-20%;
+	left:-2.5%;
+	height:175%;
+	width:calc(105%);
+
+	
 }
-.postpreviewcoverimg2 img{
+.postpreviewtextbackground.mask1{
+	mask-image: linear-gradient(to top, transparent 0%, rgba(0,0,0,0.7) 30%, transparent 100%);
+}
+.postpreviewtextbackground.mask2{
+	mask-image: linear-gradient(to right, transparent 0%, rgba(0,0,0,1) 10%, rgba(0,0,0,1) 90%, transparent 100%);
+}
+.postpreviewtextbackground.background{
+	width:100%;
+	height:100%;
+	background-color:red;
+}
+.postpreviewcoverimgcontainer{
+	position:relative;
+	img{
+		margin:0;
+		width:100%;
+		object-fit:cover;
+	}
+}
+.postpreviewcoverimg2{
+	position: absolute;
+	width:100%;
+	filter: blur(15px) brightness(1.1);
+	transition:0.25s filter;
+	top:0;
+	z-index: -1;
+}
+
+.postpreviewcoverimg1 {
+	/*mask-image: linear-gradient(to top, transparent 1%, white 70%, white 80%, transparent 99%);*/
+	/*width: 110%;
+	translate:-5% -5%;*/
+	/*margin-bottom: -130px;*/
+	
+
+	transition:0.25s filter;
+	filter:brightness(1);
+	
+
+}
+.postpreviewcoverimg1.mask1 {
+	mask-image: linear-gradient(to left, transparent 1%, white 10%, white 90%, transparent 100%);
+
+	.mask2 {
+		mask-image: linear-gradient(to top, transparent 1%, white 10%, white 90%, transparent 100%);
+	}
+}
+/*.postpreviewcoverimg2 img{
+	
 	width: 100%;
 	height:auto;
-	aspect-ratio: 2/1;
 	margin:0;
 	display:inline;
 	object-fit:cover;
-}
+}*/
 .postpreviewtitle{
 	color:rgb(0, 180, 0);
-	word-wrap: break-word;
-	width:fit-content;
-	
+	word-wrap:break-word;
+	max-width:fit-content;
+}
+.postpreviewsummary{
+	max-width:fit-content;
 }
 .postpreviewtimetags{
 	display:flex;
 	gap:5px;
 	flex-direction:row;
-	align-content: flex-end;
-	flex-wrap: nowrap;
+	align-content:flex-end;
+	flex-wrap:nowrap;
 	width:fit-content;
 	opacity:0.75;
 }
@@ -578,7 +641,17 @@ svg{
 	font-size:12px;
 	margin-top:-8px;
 }
-
+.smallpostscontainer{
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	grid-gap: 10px;
+	margin-bottom:50px;
+	
+}
+.smallpost{
+	width:100%;
+	
+}
 
 
 
