--- a/mat383/layouts/shortcodes/list.html
+++ b/mat383/layouts/shortcodes/list.html
@@ -1,8 +1,8 @@
-<div class="posts">
+<!--<div class="posts">
 	{{ $section := .Get "section" | default "blog" }}
 	{{- range where .Site.RegularPages "Section" $section }}
 		<a href="{{ .RelPermalink }}" class="postpreviewlink">
-			<div class="postpreview">
+			<div class="postpreview  {{ if .Param "smallpost" -}}smallpost{{- end -}}">
 				{{ if .Params.coverimg }}
 					<div class="postpreviewcoverimg">
 					<div class="postpreviewcoverimg2">
@@ -37,4 +37,51 @@
 			</div>
 		</a>
 	{{- end }}
+</div>-->
+
+{{/* 
+This shortcode lists all pages in a section ("/blog" by default) as if they were blog posts.
+Small posts and big posts are put into separate div containers.
+
+Example usage:
+{{< list section="blog" >}}
+*/}}
+
+<div class="postscontainer">
+	{{/* Variable for keeping track of if we're in a smallpostcontainer or bigpostcontainer div */}}
+    {{ $currentSection := "" }}
+    
+    {{ range where .Site.RegularPages "Section" $section }}
+        {{ if .Param "smallpost" }}
+			{{/* End a bigpostcontainer div */}}
+            {{ if eq $currentSection "bigpost" }}
+                </div>
+            {{ end }}
+            
+			{{/* Start a smallpostcontainer div */}}
+            {{ if ne $currentSection "smallpost" }}
+                <div class="smallpostscontainer">
+                    {{ $currentSection = "smallpost" }}
+            {{ end }}
+            
+			{{/* Output the post */}}
+            {{ partial "postpreview.html" . }}
+            
+        {{ else }}
+			{{/* End a smallpostcontainer div */}}
+            {{ if eq $currentSection "smallpost" }}
+                </div>
+            {{ end }}
+            
+
+			{{/* Start a bigpostcontainer div */}}
+            {{ if ne $currentSection "bigpost" }}
+                <div class="bigpostscontainer">
+                    {{ $currentSection = "bigpost" }}
+            {{ end }}
+            
+			{{/* Output the post */}}
+            {{ partial "postpreview.html" . }}
+        {{ end }}
+    {{ end }}
 </div>
