--- a/mat383/assets/style.css
+++ b/mat383/assets/style.css
@@ -544,6 +544,10 @@ svg{
 	display:inline;
 	margin:1% 10px;
 	padding-bottom: 10px;
+
+	text-shadow: 3px 3px 4px black;
+
+	
 	/*background-color:#000000bb;
 	box-shadow:0px 0px 20px 10px #000000bb;*/
 	
@@ -571,7 +575,7 @@ svg{
 .postpreviewtextbackground.background{
 	width:100%;
 	height:100%;
-	background-color:red;
+	/*background-color:red;*/
 }
 .postpreviewcoverimgcontainer{
 	position:relative;
@@ -621,6 +625,11 @@ svg{
 	color:rgb(0, 180, 0);
 	word-wrap:break-word;
 	max-width:fit-content;
+}
+.postpreviewindividualbackground{
+	margin-bottom: 6px;
+	background-color:#00000057;
+	box-shadow:0px 0px 10px 3px #00000077;
 }
 .postpreviewsummary{
 	max-width:fit-content;
