--- a/mat383/assets/style.css
+++ b/mat383/assets/style.css
@@ -490,30 +490,116 @@ svg{
 
 
 
+/* Post previews */
+.postscontainer {
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: row;
+	align-items:flex-start;
+	justify-content: center;
+	gap:100px 70px;
+	margin: 60px 0 60px 0;
+}
 
+.postpreviewlink{
+	text-decoration-line:none;
+	color:#ccc;
+	flex-grow: 1;
+	width:100%;
+}
+.smallpost{
+	width: 40%;
+	max-width: 50%;
+}
 
+.postpreview{
+	/*border: solid 1px red;*/
 
+	/*background-color:#00000057;
+	box-shadow:0px 0px 20px 10px #0000006c;*/
 
-
+	position: relative;
+	display:flex;
+	flex-direction:column;
+	justify-content:flex-end;
+}
+.postpreviewcoverimgcontainer{
+	position:relative;
+}
+.postpreviewcoverimg img{
+	width:100%;
+	object-fit: contain;
+}
+.postpreviewcoverimg._1{
+	width:100%;
+	filter:blur(20px) brightness(1.2) saturate(2);
+	position:absolute;
+	top:0;
+	left:0;
+	
+	.mask1{
+		mask-image: linear-gradient(to top, transparent 0%, white 70%);
+	}
+	
+}
+.postpreviewcoverimg._2{
+	filter:blur(0px);
+	.mask1{
+		mask-image: linear-gradient(to top, transparent 0%, white calc(100% - 70px), transparent 100%);
+	}
+	.mask2{
+		mask-image: linear-gradient(to right, transparent 0%, white calc(0% + 70px), white calc(100% - 70px), transparent 100%);
+	}
+}
+.postpreviewtext{
+	z-index: 2;
+	position:absolute;
+	width: calc(100% - 40px);
+	padding:0 20px;
+}
+.postpreviewbackground{
+	width:100%;
+	opacity: 0.4;
+	height:calc(100% * 5);
+	position:absolute;
+	z-index: -1;
+	bottom:-35%;
+	right:0;
+	background-image:linear-gradient(to top, transparent 0%, black 10%, transparent 70%);
+	mask-image: linear-gradient(to right, transparent 0%, white calc(0% + 25px), white calc(100% - 25px), transparent 100%);
+}
+.postpreviewtext.nocoverimg{
+	position:relative;
+	.postpreviewbackground{
+		opacity: 1;
+		height:100%;
+		bottom:0%;
+		background-image: none;
+		background-color:#00000057;
+		box-shadow:0px 0px 20px 10px #0000006c;
+		mask-image: none;
+	}
+}
 
 
 
 
 /* Post previews */
+/*
 .postscontainer {
 	/*display: flex;
 	flex-wrap: wrap;
 	flex-direction: column;
 	gap:70px;
 	align-items:center;
-	justify-content: center;*/
+	justify-content: center;*//*
 	margin: 60px 0 60px 0;
 }
 .postpreviewlink{
 	text-decoration-line:none;
 	color:#ccc;
 	margin: 30px auto;
-	/*flex: 1 1 28%;*/
+	/*flex: 1 1 28%;*//*
 	max-width: fit-content;
 
 	max-height: fit-content;
@@ -526,7 +612,7 @@ svg{
 	position:relative;
 
 	/*background-color:#00000057;*/
-	/*box-shadow:0px 0px 20px 10px #0000006c;*/
+	/*box-shadow:0px 0px 20px 10px #0000006c;*//*
 	transition:0.4s scale cubic-bezier(0.075, 0.82, 0.165, 1);
 
 }
@@ -537,7 +623,7 @@ svg{
 	.postpreviewcoverimg2{filter:blur(15px) brightness(1.5)}
 }
 .postpreviewtext{
-	/*TODO I can add backdrop-filter here maybe*/
+	/*TODO I can add backdrop-filter here maybe*//*
 	position:absolute;
 	width:calc(100% - 20px);
 	z-index: 1;
@@ -549,7 +635,7 @@ svg{
 
 	
 	/*background-color:#000000bb;
-	box-shadow:0px 0px 20px 10px #000000bb;*/
+	box-shadow:0px 0px 20px 10px #000000bb;*//*
 	
 }
 .postpreviewtextnocoverimg{
@@ -575,7 +661,7 @@ svg{
 .postpreviewtextbackground.background{
 	width:100%;
 	height:100%;
-	/*background-color:red;*/
+	/*background-color:red;*//*
 }
 .postpreviewcoverimgcontainer{
 	position:relative;
@@ -586,6 +672,7 @@ svg{
 	}
 }
 .postpreviewcoverimg2{
+	mask-image: linear-gradient(to top, transparent 1%, white 50%, transparent 100%);
 	position: absolute;
 	width:100%;
 	filter: blur(15px) brightness(1.1);
@@ -599,7 +686,7 @@ svg{
 	/*width: 110%;
 	translate:-5% -5%;*/
 	/*margin-bottom: -130px;*/
-	
+	/*
 
 	transition:0.25s filter;
 	filter:brightness(1);
@@ -610,7 +697,7 @@ svg{
 	mask-image: linear-gradient(to left, transparent 1%, white 10%, white 90%, transparent 100%);
 
 	.mask2 {
-		mask-image: linear-gradient(to top, transparent 1%, white 10%, white 90%, transparent 100%);
+		mask-image: linear-gradient(to top, transparent 1%, white 50%, white 90%, transparent 100%);
 	}
 }
 /*.postpreviewcoverimg2 img{
@@ -621,15 +708,11 @@ svg{
 	display:inline;
 	object-fit:cover;
 }*/
+/*
 .postpreviewtitle{
 	color:rgb(0, 180, 0);
 	word-wrap:break-word;
 	max-width:fit-content;
-}
-.postpreviewindividualbackground{
-	margin-bottom: 6px;
-	background-color:#00000057;
-	box-shadow:0px 0px 10px 3px #00000077;
 }
 .postpreviewsummary{
 	max-width:fit-content;
@@ -660,7 +743,7 @@ svg{
 .smallpost{
 	width:100%;
 	
-}
+}*/
 
 
 
@@ -1039,10 +1122,10 @@ footer a:hover{
     from{ opacity:0; filter:blur(5px); }
     to{ opacity:1; filter:blur(0px); }
 }
-@keyframes float-in{
+/*TODO uncomment this!!!!! @keyframes float-in{
     0%{opacity:0; transform:translateY(-30px)}
     100%{opacity:1;}
-}
+}*/
 
 
 
