--- a/mat383/layouts/partials/postpreview.html
+++ b/mat383/layouts/partials/postpreview.html
@@ -1,14 +1,6 @@
-<a href="{{ .RelPermalink }}" class="postpreviewlink">
+{{/*<a href="{{ .RelPermalink }}" class="postpreviewlink">
 <div class="postpreview {{ if .Param "smallpost" }}smallpost{{end}}">
     {{ if .Params.coverimg }}
-    {{/*<div class="postpreviewcoverimg">
-        <div class="postpreviewcoverimg2">
-            <picture>
-                <source srcset="/images/thumbnails/{{ .Params.coverimg }}.{{ .Params.coverimgmaintype }}" type="image/{{ .Params.coverimgmaintype }}">
-                <img src="/images/thumbnails/{{ .Params.coverimg }}.jpg" width="400" height="200">
-            </picture>
-        </div>
-    </div>*/}}
     <div class="postpreviewcoverimgcontainer">
         <div class="postpreviewcoverimg1 mask1">
             <div class="mask2">
@@ -48,4 +40,53 @@
         {{ end }}
     </div>
 </div>
-</a>
+</a>*/}}
+
+<a href="{{ .RelPermalink }}" class="postpreviewlink {{ if .Param "smallpost" }}smallpost{{end}}">
+    <div class="postpreview">
+        {{ if .Params.coverimg }}
+        {{/*<div class="postpreviewcoverimg">
+            <div class="postpreviewcoverimg2">
+                <picture>
+                    <source srcset="/images/thumbnails/{{ .Params.coverimg }}.{{ .Params.coverimgmaintype }}" type="image/{{ .Params.coverimgmaintype }}">
+                    <img src="/images/thumbnails/{{ .Params.coverimg }}.jpg" width="400" height="200">
+                </picture>
+            </div>
+        </div>*/}}
+        <div class="postpreviewcoverimgcontainer">
+            <div class="postpreviewcoverimg _1">
+                <div class="mask1">
+                    <div class="mask2">
+                        <picture>
+                            <source srcset="/images/thumbnails/{{ .Params.coverimg }}.{{ .Params.coverimgmaintype }}" type="image/{{ .Params.coverimgmaintype }}">
+                            <img src="/images/thumbnails/{{ .Params.coverimg }}.jpg" width="" height="">
+                        </picture>
+                    </div>
+                </div>
+            </div>
+            <div class="postpreviewcoverimg _2">
+                <div class="mask1">
+                    <div class="mask2">
+                        <picture>
+                            <source srcset="/images/thumbnails/{{ .Params.coverimg }}.{{ .Params.coverimgmaintype }}" type="image/{{ .Params.coverimgmaintype }}">
+                            <img src="/images/thumbnails/{{ .Params.coverimg }}.jpg" width="" height="">
+                        </picture>
+                    </div>
+                </div>
+            </div>
+        </div>
+        {{ end }}
+        <div class="postpreviewtext {{ if not .Params.coverimg }}nocoverimg{{ end }}">
+            <div class="postpreviewtime">
+                {{- if .Param "datesinlist" -}}
+                    <time datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" }}">{{ .Date.Format "2006 Jan 02" }}</time>
+                {{- end -}}
+            </div>
+            <div class="postpreviewtitle">{{ .Title }}</div>
+            {{ if .Params.summary }}
+            <div class="postpreviewsummary">{{ .Params.summary }}</div>
+            {{ end }}
+            <div class="postpreviewbackground"></div>
+        </div>
+    </div>
+    </a>
