--- a/mat383/layouts/shortcodes/list.html
+++ b/mat383/layouts/shortcodes/list.html
@@ -47,6 +47,10 @@ Example usage:
 {{< list section="blog" >}}
 */}}
 
+
+<!-- Cool code that puts small posts and big posts in separate divs,
+	not needed anymore because that heirarchy is achieved with flexbox
+
 <div class="postscontainer">
 	{{/* Variable for keeping track of if we're in a smallpostcontainer or bigpostcontainer div */}}
     {{ $currentSection := "" }}
@@ -83,5 +87,13 @@ Example usage:
 			{{/* Output the post */}}
             {{ partial "postpreview.html" . }}
         {{ end }}
+    {{ end }}
+</div>
+-->
+
+
+<div class="postscontainer">
+	{{ range where .Site.RegularPages "Section" $section }}
+	{{ partial "postpreview.html" . }}
     {{ end }}
 </div>
