--- a/mat383/assets/style.css
+++ b/mat383/assets/style.css
@@ -497,15 +497,32 @@ svg{
 	flex-direction: row;
 	align-items:flex-start;
 	justify-content: center;
-	gap:100px 70px;
+	gap:70px 70px;
 	margin: 60px 0 60px 0;
 }
 
 .postpreviewlink{
+	align-self: center;
 	text-decoration-line:none;
 	color:#ccc;
 	flex-grow: 1;
 	width:100%;
+
+	transition:0.3s scale cubic-bezier(0.075, 0.82, 0.165, 1);
+	.postpreviewcoverimg._1 {
+		transition:0.3s filter cubic-bezier(0.075, 0.82, 0.165, 1);
+	}
+}
+.postpreviewlink:hover{
+	scale:1.05;
+	.postpreviewtitle {text-decoration:underline;}
+	.postpreviewcoverimg._1 {
+		filter:blur(20px) brightness(1.4) saturate(2);
+	}
+}
+.postpreviewlink:not(.smallpost){
+
+	margin-top: 15px;
 }
 .smallpost{
 	width: 40%;
@@ -513,11 +530,6 @@ svg{
 }
 
 .postpreview{
-	/*border: solid 1px red;*/
-
-	/*background-color:#00000057;
-	box-shadow:0px 0px 20px 10px #0000006c;*/
-
 	position: relative;
 	display:flex;
 	flex-direction:column;
@@ -532,7 +544,7 @@ svg{
 }
 .postpreviewcoverimg._1{
 	width:100%;
-	filter:blur(20px) brightness(1.2) saturate(2);
+	filter:blur(20px) brightness(1.2) saturate(1.4);
 	position:absolute;
 	top:0;
 	left:0;
@@ -554,18 +566,19 @@ svg{
 .postpreviewtext{
 	z-index: 2;
 	position:absolute;
-	width: calc(100% - 40px);
-	padding:0 20px;
+	width: calc(100% - 60px);
+	padding:15px 30px 10px;
+	text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 .postpreviewbackground{
 	width:100%;
 	opacity: 0.4;
-	height:calc(100% * 5);
+	height:calc(100% * 4.5);
 	position:absolute;
 	z-index: -1;
-	bottom:-35%;
+	bottom:-20%;
 	right:0;
-	background-image:linear-gradient(to top, transparent 0%, black 10%, transparent 70%);
+	background-image:linear-gradient(to top, transparent 0%, black 6%, transparent 70%);
 	mask-image: linear-gradient(to right, transparent 0%, white calc(0% + 25px), white calc(100% - 25px), transparent 100%);
 }
 .postpreviewtext.nocoverimg{
@@ -581,6 +594,21 @@ svg{
 	}
 }
 
+.postpreviewtitle{
+	color:rgb(0, 180, 0);
+	font-size:1.1em;
+	font-weight: bold;
+	word-wrap:break-word;
+	max-width:fit-content;
+}
+.postpreviewsummary{
+	max-width:fit-content;
+}
+.postpreviewtime{
+	font-size:14px;
+	margin-top:-8px;
+	opacity:0.75;
+}
 
 
 
