--- a/mat383/assets/style.css
+++ b/mat383/assets/style.css
@@ -463,6 +463,27 @@ img, video{
 	display:block;
 	object-fit:scale-down;
 }
+.blurimgcontainer{
+	position: relative;
+	margin-left:auto;
+	margin-right:auto;
+}
+.blurimg{
+	width:100%;
+	object-fit: cover;
+}
+.blurimg._2 {
+	position: relative;
+	z-index: -1;
+	filter: blur(20px) brightness(1.5);
+	img{
+		width:100%;
+		position: absolute;
+		bottom:0;
+		left:0;
+		object-fit: cover;
+	}
+}
 .inlineimage{
 	display:inline;
 	margin:0 0 0 0;
@@ -1155,10 +1176,10 @@ footer a:hover{
     from{ opacity:0; filter:blur(5px); }
     to{ opacity:1; filter:blur(0px); }
 }
-/*TODO uncomment this!!!!! @keyframes float-in{
+@keyframes float-in{
     0%{opacity:0; transform:translateY(-30px)}
     100%{opacity:1;}
-}*/
+}
 @keyframes postpreviewhover{
 	0%{filter: brightness(1) saturate(1.0)}
 	10%{filter: brightness(1.4) saturate(1.5)}
