--- a/mat383/layouts/shortcodes/img.html
+++ b/mat383/layouts/shortcodes/img.html
@@ -4,13 +4,22 @@
 	alt: alternative text
 	caption: caption
 	mouse: what the image says when moused over ("title" in HTML)
+	width: the max-width of the image
 -->
-<figure {{ with .Get "class" }}class="{{.}}"{{ end -}}>
+<figure {{ with .Get "class" }}class="{{.}}"{{ end -}} style="margin:0;">
 	{{- with .Get "link"}}<a href="{{.}}">{{ end -}}
-	<img src="{{ .Get "src" }}"
-	     {{- with .Get "mouse" }} title="{{.}}"{{ end -}}
-	     {{- with .Get "alt" }} alt="{{.}}"{{ end -}}
-	>
+	<div class="blurimgcontainer" style="width:auto;max-width:{{ .Get "width"}}px;">
+		<img class="blurimg _1" src="{{ .Get "src" }}"
+			{{- with .Get "mouse" }} title="{{.}}"{{ end -}}
+			{{- with .Get "alt" }} alt="{{.}}"{{ end -}}
+		>
+		<div class="blurimg _2">
+			<img src="{{ .Get "src" }}"
+				{{- with .Get "mouse" }} title="{{.}}"{{ end -}}
+				{{- with .Get "alt" }} alt="{{.}}"{{ end -}}
+			>
+		</div>
+	</div>
 	{{- if .Get "link"}}</a>{{ end -}}
 	{{- with .Get "caption" -}}
 	<figcaption>
